[B]wersja 2.1.7[/B] - 2016-02-23
- Przywrocenie opcji dodania wlasnych url do epg
- Zmieniono nazewnictwo Default/Alternative w glownym epg, powinno byc jasniejsze
  ze Default/Alternative to Serwer#1 albo Serwer#2

[B]wersja 2.1.5[/B] - 2016-02-22
- Modifikacje headers

[B]wersja 2.1.3[/B] - 2016-02-22
- Dodanie epg dla kanalow 24h na weeb.tv, mozna wlaczyc w ustawieniach
- Dodanie epg dla kanalow dla doroslych na telewizjada.net, mozna wlaczyc w ustawieniach

[B]wersja 2.1.0[/B] - 2016-02-21
- obsługa nagrywania serwisów goldvod weeb.tv oraz telewizjada
- rozbudowane menu przypisywania klawiszy o przyciski context, nagrywania oraz resetowania ustawień
- dodana opcja "Debug" do menu ustawień zwiększająca ilość generowanych logów
- dodana obsługa Playlist m3u
- obsługa serwisów została wrzucona w wątki które pracują równolegle, dzięki temu wtyczka powinna uruchamiać się szybciej.
- usprawniona obsługa błędów serwisu telewizjada
- naprawiony błąd w e-TVGuide który mógł powodować sporadyczne całkowite zwisy wtyczki
- aktualzacja addons.ini (usunięcie zbędnych kanałów z nieaktywnej wtyczki Telewizja Polska od Novak, dodanie popularnych streamów z EskaGO i regionalnej telewizji)
- dodanie wyświetlania aktualnego czasu w oknie informacji o nadawanym programie
- dodanie przycisku ustawień do paska sterowania myszką dla skórek Default


[B]wersja 2.0.2[/B] - 2016-01-27
- Naprawa buttona dla firetv

[B]wersja 2.0.1[/B] - 2016-01-27
- Poprawka w ustawieniach
- dodanie nowej mapy do telewizjada.net

[B]wersja 2.0.0[/B] - 2016-01-26
- dodana obsługa wielu streamów, m-TVGuide zapisze w bazie wszystkie streamy z aktywnych serwisów
- wykrywanie uszkodzonych streamów, w takim wypadku wtyczka automatycznie uruchomi kolejny stream z listy (jeśli jest ich więcej)
- dodana możliwość przełączania serwisów dla aktualnie oglądanego kanału przyciskiem context (default klawisz "c") zgodnie z kolejnością ustawionych priorytetów serwisów - działa z OSD/bez OSD