@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.etvguide" name="e-TVGuide" version="2.1.9" provider-name="thebedi">
+<addon id="script.etvguide" name="e-TVGuide" version="2.1.10" provider-name="thebedi">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
 		<import addon="script.module.simplejson" version="2.0.10"/>
