@@ -21,15 +21,17 @@
 	<string id="30110">Aktualizuj informacje o programie podczas startu XBMC</string>
 	<string id="30116">Wyszukaj obrazki kanałów w</string>
 	<string id="30117">Wybierz EPG:</string>
-	<string id="30118">Główne:</string>
+	<string id="30118">Serwer:</string>
 	<string id="30120">Weeb.tv kanaly 24h:</string>
 	<string id="30121">Telewizjada.net kanaly dla doroslych:</string>
 	<string id="30122">Dodatkowe 1:</string>
 	<string id="30123">Dodatkowe 2:</string>
+	<string id="30124">[COLOR gray]Użyj skompresowane pliki (zaoszczędza ~6MB transferu)[/COLOR]</string>
+	<string id="30125">Głowne:</string>
 	<string id="30130">Serwer #1</string>
 	<string id="30131">Serwer #2</string>
 	<string id="30150">Ładowanie nie powiodło się!</string>
-	<string id="30151">Twoje ustawienia lub podany adres są błędne![CR]</string>
+	<string id="30151">Twoje ustawienia lub podany adres są błędne!</string>
 	<string id="30152">Sprawdź ustawienia albo sproboj ponownie pozniej</string>
 	<string id="30153">ponieważ ustawienia są błędne!</string>
 	<string id="30154">Wygląda na to, że skórka której używasz</string>
